# Web-based-Exploding-Kittens

./: .gitignore  README.md  flow.drawio  package-lock.json
broadcast-server/: README.md  main.py  pyproject.toml
broadcast-server/connections/: connections_manager.py
broadcast-server/database/: create_db_tables.py  database.py  enums.py  models.py
broadcast-server/endpoints/: music.py
broadcast-server/game_execution/: game_orchestrator.py
broadcast-server/game_messenger/: messenger.py
broadcast-server/room/: room_manager.py
broadcast-server/test_send_audio/: player.html  test.js
front-end/broadcast-frontend/: index.html  package-lock.json  package.json
front-end/broadcast-frontend/src/: App.jsx  index.css
front-end/broadcast-frontend/src/components/: GameCard.jsx  Home.jsx  Lobby.jsx  MusicPlayer.jsx  Room.jsx  Starter.jsx
front-end/broadcast-frontend/src/hooks/: useWebSocket.js
front-end/broadcast-frontend/src/styling/: Player.css
